--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,34 +1,27 @@
-name: Generate snake animation
+name: Generate Contribution Snake
 
 on:
-  schedule: # execute every 12 hours
-    - cron: "* */12 * * *"
-
+  schedule:
+    - cron: "0 0 * * *" # Runs daily
   workflow_dispatch:
-
-  push:
-    branches:
-    - master
 
 jobs:
   generate:
-    permissions:
-      contents: write
     runs-on: ubuntu-latest
-    timeout-minutes: 5
 
     steps:
-      - name: generate snake.svg
-        uses: Platane/snk/svg-only@v3
-        with:
-          github_user_name: ${{ github.repository_owner }}
-          outputs: dist/snake.svg?palette=github-dark
+      - name: Checkout Repository
+        uses: actions/checkout@v3
 
-
-      - name: push snake.svg to the output branch
-        uses: crazy-max/ghaction-github-pages@v3.1.0
+      - name: Generate Snake SVG
+        uses: Platane/snk@v2
         with:
-          target_branch: output
-          build_dir: dist
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          github_user_name: dirshaye
+          outputs: dist/github-contribution-grid-snake.svg
+
+      - name: Push Generated Snake
+        uses: ad-m/github-push-action@v0.6
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          branch: output
+          force: true
