--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Generate Snake SVG
         uses: Platane/snk@v2
         with:
-          github_user_name: dirshaye
+          github_user_name: dirshaye # Replace with your GitHub username
           outputs: dist/github-contribution-grid-snake.svg
 
       - name: Push Generated Snake
