--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -16,16 +16,16 @@ jobs:
       - name: Generate Snake SVG
         uses: Platane/snk@v2
         with:
-          github_user_name: dirshaye # Replace with your GitHub username
-          outputs: dist/github-contribution-grid-snake.svg
+          github_user_name: dirshaye
 
-      - name: Push Generated Snake
-        uses: ad-m/github-push-action@master
-        
-      - name: GitHub Push
-        uses: ad-m/github-push-action@v0.8.0
-            
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          branch: output
-          force: true
+      - name: Commit and Push Generated Snake
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          # Ensure the output branch exists
+          git config user.name "GitHub Actions"
+          git config user.email "actions@github.com"
+          git checkout -B output
+          git add -f dist/github-contribution-grid-snake.svg
+          git commit -m "Generated contribution snake"
+          git push -u origin output --force
