--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -3,10 +3,10 @@ name: Generate Contribution Snake
 on:
   schedule:
     - cron: "0 0 * * *" # Runs daily
-  workflow_dispatch:
+  workflow_dispatch: # Allows manual triggering
 
 permissions:
-  contents: write # Ensure the workflow has write permissions
+  contents: write # Ensures the workflow can push updates
 
 jobs:
   generate:
@@ -17,15 +17,15 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Generate Snake SVG
-        uses: Platane/snk-action@v3 # Updated action version
+        uses: Platane/snk-action@v3 # Using updated version
         with:
           github_user_name: dirshaye
-          outputs: dist/github-contribution-grid-snake.svg
+          outputs: snake.svg
 
-      - name: Check Generated File
-        run: ls -l dist # Debugging step to ensure file exists
+      - name: Move SVG to Root (if needed)
+        run: mv snake.svg snake.svg || true
 
-      - name: Ensure output branch exists
+      - name: Ensure Output Branch Exists
         run: |
           git fetch origin output || git checkout --orphan output
           git reset --hard
@@ -37,6 +37,6 @@ jobs:
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
           git checkout -B output
-          git add -f dist/github-contribution-grid-snake.svg
-          git commit -m "Generated contribution snake" || echo "No changes to commit"
+          git add -f snake.svg
+          git commit -m "Updated contribution snake" || echo "No changes to commit"
           git push -u origin output --force
