--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -16,11 +16,10 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v3
 
-      - name: Generate Snake SVG (Alternative Fork)
-        uses: crazy-max/ghaction-github-contribution-grid-snake@v2
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          output: dist/snake.svg
+      - name: Generate Contribution Snake
+        run: |
+          mkdir -p dist
+          curl -L https://ghchart.rshah.org/dirshaye -o dist/snake.svg
 
       - name: Check Generated File
         run: ls -l dist # Debugging step to verify the file exists
